# image_stitching

./: .gitignore  README.md  pyproject.toml
.obsidian/: workspace.json
docs/: math.md  tutorial.md
notebooks/: demo.ipynb  multiple_image_stitch.ipynb  two_image_stitch_demo.ipynb
src/image_stitching/: pyramid.py  stitch.py  stitch_toy.py  stitch_utils.py
