[project]
name = "image-stitching"
version = "0.1.0"
description = "A repository for learning and demonstrating image stitching"
authors = [{ name = "Tianle", email = "caotianlebme@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
